Finish tag selectors

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
         into the 'styles.css' file and replace this <style> tag and its contents
         with a <link> tag that refers to 'styles.css'
       */
+
+      html {
+        font-size: 10px;
+      }
+
+      h1 {
+        font-family: sans-serif;
+      }
+
+      h2 {
+        font-family: serif;
+      }
+      header {
+        border: 1px solid #000;
+      }
+
     </style>
   </head>
   <body>
