Finish class selectors

--- a/index.html
+++ b/index.html
@@ -38,6 +38,24 @@
         border: 1px solid #000;
       }
 
+      .class-list {
+        list-style-type: square;
+      }
+
+      .item {
+        border: 5px solid #000;
+      }
+
+      .even {
+        background-color: grey
+      }
+
+      .odd {
+        background-color: black;
+        color: white;
+      }
+
+
     </style>
   </head>
   <body>
