--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
         color: white;
       }
 
+      #item1 {
+        font-size: 30px
+      }
+
+      #item2 {
+        text-align: right; 
+      }
+
 
     </style>
   </head>
