--- a/index.html
+++ b/index.html
@@ -14,57 +14,8 @@
 
     <!-- Re-comment both of the above <link> tags once you've seen their effect -->
 
-    <style>
-      /* Put your styles here to get started */
+   <link rel="stylesheet" href="styles.css">
 
-      /*
-        After you've finished the "Tag Selectors" exercises, move your styles
-        into the 'styles.css' file and replace this <style> tag and its contents
-        with a <link> tag that refers to 'styles.css'
-      */
-
-      html {
-        font-size: 10px;
-      }
-
-      h1 {
-        font-family: sans-serif;
-      }
-
-      h2 {
-        font-family: serif;
-      }
-      header {
-        border: 1px solid #000;
-      }
-
-      .class-list {
-        list-style-type: square;
-      }
-
-      .item {
-        border: 5px solid #000;
-      }
-
-      .even {
-        background-color: grey
-      }
-
-      .odd {
-        background-color: black;
-        color: white;
-      }
-
-      #item1 {
-        font-size: 30px
-      }
-
-      #item2 {
-        text-align: right; 
-      }
-
-
-    </style>
   </head>
   <body>
     <header>
